--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
         <th>Outreach 6</th>
     </tr>
     <tr>
-        <td id="o1">03/09/2022</td>
-        <td id="o2">05/09/2022</td>
-        <td id="o3">08/09/2022</td>
-        <td id="o4">09/09/2022</td>
-        <td id="o5">10/09/2022</td>
-        <td id="o6">11/09/2022</td>
-        <td id="o7">12/09/2022</td>
+        <td id="o0">03/09/2022</td>
+        <td id="o1">05/09/2022</td>
+        <td id="o2">08/09/2022</td>
+        <td id="o3">09/09/2022</td>
+        <td id="o4">10/09/2022</td>
+        <td id="o5">11/09/2022</td>
+        <td id="o6">12/09/2022</td>
     </tr>
 </table>
+
+<button onclick="copyClipboard()">Copy to Clipboard</button>
 
 </body>
 
