--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
         <th>Outreach 4</th>
         <th>Outreach 5</th>
         <th>Outreach 6</th>
+        <th>Recycle Date</th>
     </tr>
     <tr>
-        <td id="o0">03/09/2022</td>
-        <td id="o1">05/09/2022</td>
-        <td id="o2">08/09/2022</td>
-        <td id="o3">09/09/2022</td>
-        <td id="o4">10/09/2022</td>
-        <td id="o5">11/09/2022</td>
-        <td id="o6">12/09/2022</td>
+        <td id="o0"></td>
+        <td id="o1"></td>
+        <td id="o2"></td>
+        <td id="o3"></td>
+        <td id="o4"></td>
+        <td id="o5"></td>
+        <td id="o6"></td>
+        <td id="o7"></td>
     </tr>
 </table>
 
